# spoorkl

./: CMakeLists.txt  LICENSE  README.md  httplib.h  main.cpp  resources.qrc
build-release/: config.json  hotkeys.cfg  info.txt  style.qss
build-release/presets/: default-atlas.json
